force-app/main/default/objects/Interview__c/fields/AI_Score_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Score_Suggestion__c</fullName>
    <label>AI Score Suggestion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>