force-app/main/default/objects/Interview__c/fields/AI_Suggested_Questions__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Questions__c</fullName>
    <label>AI Suggested Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>