force-app/main/default/objects/Interview__c/fields/Auto_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Reassigned</label>
    <type>Checkbox</type>
</CustomField>