force-app/main/default/objects/Interview__c/fields/Availability_Slot__c.field-meta.xml
<CustomField>
    <fullName>Availability_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability Slot</label>
    <referenceTo>Availability_Slot__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>