force-app/main/default/objects/Interview__c/fields/Candidate_Tried_To_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Tried_To_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates that the candidate clicked Confirm Schedule for this interview. Used by the deadline batch to avoid penalizing candidates who actively tried to reserve a slot.</description>
    <inlineHelpText
  >Checked automatically when the candidate confirms a scheduling attempt.</inlineHelpText>
    <label>Candidate Tried To Schedule</label>
    <type>Checkbox</type>
</CustomField>