force-app/main/default/objects/Interview__c/fields/Candidate_Tried_To_Schedule_At__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Tried_To_Schedule_At__c</fullName>
    <description
  >Stores the latest date and time when the candidate attempted to schedule the interview.</description>
    <inlineHelpText
  >Updated when the candidate clicks Confirm Schedule or when no slots are available to choose from.</inlineHelpText>
    <label>Candidate Tried To Schedule At</label>
    <type>DateTime</type>
</CustomField>