force-app/main/default/objects/Interview__c/fields/Candidate_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Withdrawn</label>
    <type>Checkbox</type>
</CustomField>