force-app/main/default/objects/Interview__c/fields/End_Date_Time_c__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time_c__c</fullName>
    <label>End_Date_Time__c</label>
    <type>DateTime</type>
</CustomField>