force-app/main/default/objects/Interview__c/fields/Interview_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_Score__c</fullName>
    <label>Interview Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>