force-app/main/default/objects/Interview__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview Stage</label>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>