force-app/main/default/objects/Interview__c/fields/Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Sent</label>
    <type>Checkbox</type>
</CustomField>