force-app/main/default/objects/Interview__c/fields/Meeting_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Created_DateTime__c</fullName>
    <label>Meeting Created DateTime</label>
    <description>When the online meeting link was generated.</description>
    <type>DateTime</type>
</CustomField>