force-app/main/default/objects/Interview__c/fields/Meeting_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_External_Id__c</fullName>
    <label>Meeting External Id</label>
    <description>Provider-side identifier of the meeting (Google Calendar event id, Zoom meeting id, Teams onlineMeeting id). Kept so the meeting can be cancelled or rescheduled later.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>