force-app/main/default/objects/Interview__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <label>Meeting Link</label>
    <description
  >Join URL for the generated online meeting (Google Meet / Zoom / Teams).</description>
    <type>Url</type>
</CustomField>