force-app/main/default/objects/Interview__c/fields/Meeting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Provider__c</fullName>
    <label>Meeting Provider</label>
    <description
  >Video provider used to generate this interview's online meeting.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Meet</fullName>
                <default>true</default>
                <label>Google Meet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>