force-app/main/default/objects/Interview__c/fields/Motivation_Letter_Summary__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Letter_Summary__c</fullName>
    <label>Motivation Letter Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>