force-app/main/default/objects/Interview__c/fields/Passes_To_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Passes_To_Next_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passes To Next Stage</label>
    <type>Checkbox</type>
</CustomField>