force-app/main/default/objects/Interview__c/fields/Replacement_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interviews (Replacement)</relationshipLabel>
    <relationshipName>Interviews_Replacement</relationshipName>
    <type>Lookup</type>
</CustomField>