force-app/main/default/objects/Interview__c/fields/Reschedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Status__c</fullName>
    <label>Reschedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>