force-app/main/default/objects/Interview__c/fields/Rescheduled_From__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescheduled From</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interviews (Rescheduled From)</relationshipLabel>
    <relationshipName>Interviews_Rescheduled_From</relationshipName>
    <type>Lookup</type>
</CustomField>