force-app/main/default/objects/Interview__c/fields/Rescheduled_To__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescheduled To</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interviews (Rescheduled To)</relationshipLabel>
    <relationshipName>Interviews_Rescheduled_To</relationshipName>
    <type>Lookup</type>
</CustomField>