force-app/main/default/objects/Interview__c/fields/Scheduled_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_DateTime__c</fullName>
    <label>Scheduled DateTime</label>
    <type>DateTime</type>
</CustomField>