force-app/main/default/objects/Interview__c/fields/Scheduling_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Deadline__c</fullName>
    <description
  >Deadline before which the candidate must schedule the interview.</description>
    <label>Scheduling Deadline</label>
    <type>DateTime</type>
</CustomField>