force-app/main/default/objects/Interview__c/fields/Scheduling_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Issue_Reason__c</fullName>
    <description
  >Stores the latest scheduling blocker detected by the candidate self-scheduling process.</description>
    <inlineHelpText
  >Used by HR and the expiration process to distinguish candidate inactivity from scheduling availability issues.</inlineHelpText>
    <label>Scheduling Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No_Available_Slots</fullName>
                <label>No Available Slots</label>
            </value>
            <value>
                <fullName>Slot_Became_Unavailable</fullName>
                <label>Slot Became Unavailable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>