force-app/main/default/objects/Interview__c/fields/Vexa_Bot_Status__c.field-meta.xml
<CustomField>
    <fullName>Vexa_Bot_Status__c</fullName>
    <description
  >Lifecycle of the Vexa bot for this interview. Set by the dispatch action and by the webhook receiver.</description>
    <label>Vexa Bot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Idle</fullName><default>true</default><label
        >Idle</label></value>
            <value><fullName>Joining</fullName><default>false</default><label
        >Joining</label></value>
            <value><fullName>Recording</fullName><default>false</default><label
        >Recording</label></value>
            <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
            <value><fullName>Stopped</fullName><default>false</default><label
        >Stopped</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>