force-app/main/default/objects/Interview__c/fields/Vexa_Stats_JSON__c.field-meta.xml
<CustomField>
    <fullName>Vexa_Stats_JSON__c</fullName>
    <description
  >Per-meeting stats blob (talk ratio, silence, duration, participants) as JSON. Populated by the webhook receiver on meeting.completed.</description>
    <label>Vexa Stats (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>