force-app/main/default/objects/Interview__c/fields/Vexa_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Vexa_Transcript__c</fullName>
    <description
  >Preview-only excerpt (~5k chars) of the transcript. The FULL transcript is attached as a file (transcript-&lt;code&gt;.txt + .json) to the same Interview record, visible in the Files related list. Field is populated by the Vexa webhook receiver after meeting.completed.</description>
    <label>Vexa Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>