force-app/main/default/objects/Interview__c/validationRules/VR_Interview_Interviewer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Interview_Interviewer_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Interviewer__c)</errorConditionFormula>
    <errorDisplayField>Interviewer__c</errorDisplayField>
    <errorMessage>Interviewer is required.</errorMessage>
</ValidationRule>