force-app/main/default/objects/Interview__c/validationRules/VR_Interview_Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Interview_Opportunity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Opportunity__c)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Opportunity is required.</errorMessage>
</ValidationRule>