force-app/main/default/objects/Interview__c/validationRules/VR_Interview_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Interview_Score_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Interview_Score__c &lt; 0,
  Interview_Score__c &gt; 100
)</errorConditionFormula>
    <errorMessage>Interview Score must be between 0 and 100.</errorMessage>
</ValidationRule>